@@ -1,15 +1,13 @@
-; @(#)$Ident: dist.ini 2014-01-15 17:57 pjf ;
-
 name = Yakuake-Sessions
 
 [Prereqs]
 perl              = 5.010001
 namespace::sweep  = 0.006
-Class::Usul       = v0.36.0
-File::DataClass   = v0.32.0
-Moo               = 1.003
+Class::Usul       = v0.40.0
+File::DataClass   = v0.34.0
+Moo               = 1.004002
 Net::DBus         = v1.0.0
-Unexpected        = 0.21.1
+Unexpected        = 0.22.1
 
 [Prereqs / ConfigureRequires]
 version           = 0.88
