@@ -1,9 +1,6 @@
-# @(#)Ident: Base.pm 2014-01-12 21:57 pjf ;
-
 package Yakuake::Sessions::Base;
 
 use namespace::sweep;
-use version;    our $VERSION = qv( sprintf '0.12.%d', q$Rev: 1 $ =~ /\d+/gmx );
 
 use Moo;
 use Class::Usul::Constants;
@@ -100,10 +97,6 @@ Yakuake::Sessions::Base - Attributes and methods for Yakuake session management
 
    extends 'Yakuake::Sessions::Base';
 
-=head1 Version
-
-This documents version v0.12.$Rev: 1 $ of L<Yakuake::Sessions::Base>
-
 =head1 Description
 
 Attributes and methods for Yakuake session management
@@ -174,7 +167,7 @@ Peter Flanigan, C<< <pjfl@cpan.org> >>
 
 =head1 License and Copyright
 
-Copyright (c) 2013 Peter Flanigan. All rights reserved
+Copyright (c) 2014 Peter Flanigan. All rights reserved
 
 This program is free software; you can redistribute it and/or modify it
 under the same terms as Perl itself. See L<perlartistic>
