@@ -1,9 +1,6 @@
-# @(#)Ident: Management.pm 2014-01-15 16:30 pjf ;
-
 package Yakuake::Sessions::TraitFor::Management;
 
 use namespace::sweep;
-use version; our $VERSION = qv( sprintf '0.12.%d', q$Rev: 1 $ =~ /\d+/gmx );
 
 use Class::Usul::Constants;
 use Class::Usul::Functions  qw( emit throw );
@@ -86,10 +83,6 @@ Yakuake::Sessions::TraitFor::Management - CRUD methods for session profiles
 
    extends 'Yakuake::Sessions::Base';
    with    'Yakuake::Sessions::TraitFor::Management';
-
-=head1 Version
-
-This documents version v0.12.$Rev: 1 $ of L<Yakuake::Sessions::TraitFor::Management>
 
 =head1 Description
 
@@ -184,7 +177,7 @@ Peter Flanigan, C<< <pjfl@cpan.org> >>
 
 =head1 License and Copyright
 
-Copyright (c) 2013 Peter Flanigan. All rights reserved
+Copyright (c) 2014 Peter Flanigan. All rights reserved
 
 This program is free software; you can redistribute it and/or modify it
 under the same terms as Perl itself. See L<perlartistic>
